export interface Site {
  id: number
  name: string
  address: string
  city: string
  state: string
  country: string
}