export interface ValueStream {
  id: number
  name: string
  type: string
}